// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tokens /> should render error 1`] = `
<div>
  <h3>
    Tokens
  </h3>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<Tokens /> should render spinner 1`] = `
<div>
  <h3>
    Tokens
  </h3>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border "
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
    <div
      class="spinner-text"
    />
  </div>
</div>
`;

exports[`<Tokens /> should render tokens 1`] = `
<div>
  <h3>
    Tokens
  </h3>
  <table
    class="table table-hover col-sm-12 offset-lg-1 col-lg-10"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          Name
        </th>
        <th
          aria-label="Actions"
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="align-middle"
        >
          foo
        </td>
        <td
          class="text-center"
        >
          <div
            class="btn-group"
            role="group"
          >
            <a
              class="btn btn-primary btn-sm"
              download=""
              href="/reforis/remote-access/api/tokens/1"
            >
              Download
            </a>
            <button
              class="btn btn-danger btn-sm"
              type="button"
            >
               
               
              Revoke
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          bar
        </td>
        <td
          class="text-center"
        >
          <span
            class="text-muted"
          >
            Access revoked
          </span>
        </td>
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          baz
        </td>
        <td
          class="text-center"
        >
          <div
            class="spinner-border "
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
          <div
            class="spinner-text"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
